<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--
 Subject line for the order summary email. It will be in the format of
 "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
-->
    <string name="order_summary_email_subject">Coffee Order for <xliff:g id="name" example="Amy">%s</xliff:g></string>

    <string name="app_name">Coffee Order</string>
    <string name="action_settings">Settings</string>
    <string name="edit_text_name">name</string>
    <string name="edit_text_name_hint">Name</string>
    <string name="toppings_header">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">ORDER</string>
    <string name="Please_order.">Please order.</string>

    <string name="thank_you">Thank you!</string>



</resources>
